# medico

./: .env.example  .gitignore  README.md  docker-compose.yml  hackathon_submission_transcript.md
backend/: Dockerfile  alembic.ini  entrypoint.sh  requirements.txt
backend/ai/: audit_tests.py  flag_facilities.py  flagged_facilities.json  test_metrics.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_add_facility_alerts.py
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/models/: __init__.py  alert.py  base.py  bed.py  daily_average.py  department.py  equipment.py  facility.py  footfall.py  inventory.py  staff.py  test_availability.py
backend/app/routers/: ai.py  alerts.py  attendance.py  beds.py  departments.py  equipment.py  facilities.py  footfall.py  health.py  stock.py  ws.py
backend/app/schemas/: attendance.py  bed.py  department.py  equipment.py  facility.py  footfall.py  stock.py
backend/app/services/: ai_scheduler.py  publisher.py
dashboard/: .env.local.example  package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AlertsPanel.tsx  EmptyState.tsx  FacilityCard.tsx  FacilityMap.tsx  NotificationBell.tsx
dashboard/src/lib/: api.ts  types.ts
data-pipeline/: __init__.py  pyproject.toml
data-pipeline/research/: .gitkeep  facilities_sample.json  facilities_sample_cli.json  invalid_facility.json  valid_facility.json
data-pipeline/scripts/: generate_logs.py  generator.py  load_facility.py  loader.py  seed_test_data.py
field-app/: pubspec.yaml
field-app/android/app/: build.gradle.kts
field-app/ios/Runner.xcodeproj/: project.pbxproj
field-app/lib/: main.dart
field-app/lib/data/: local_database.dart
field-app/lib/l10n/: app_en.arb  app_hi.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_hi.dart  app_localizations_te.dart  app_te.arb
field-app/linux/: CMakeLists.txt
field-app/test/: widget_test.dart
(+40 files in other folders)
